[package]
name = "tei_wrapper"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-web-httpauth = "0.7"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-actix-web = "0.7.11"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
env_logger = "0.11.5"

[dependencies.actix-rt]
version = "2.5"
